deployment/manifest/ingress/all-services-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lifesub-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: member
            port:
              number: 80
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: mysub
            port:
              number: 80
      - path: /api/subscriptions
        pathType: Prefix
        backend:
          service:
            name: mysub
            port:
              number: 80
      - path: /api/recommend
        pathType: Prefix
        backend:
          service:
            name: recommend
            port:
              number: 80
