deployment/manifest/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: member-service
            port:
              number: 80
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: mysub-service
            port:
              number: 80
      - path: /api/subscriptions
        pathType: Prefix
        backend:
          service:
            name: mysub-service
            port:
              number: 80
      - path: /api/recommend
        pathType: Prefix
        backend:
          service:
            name: recommend-service
            port:
              number: 80
